--- a/Share Beauty App/Base.lproj/SMBKCategoryViewController.storyboard
+++ b/Share Beauty App/Base.lproj/SMBKCategoryViewController.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="ipad9_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -17,6 +17,7 @@
         <!--Category View Controller-->
         <scene sceneID="muE-ph-01b">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9nP-xU-LdY" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController storyboardIdentifier="SMBKCategoryViewController" id="TYu-Ly-iev" customClass="SMBKCategoryViewController" customModule="Share_Beauty_App" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="GxM-2e-1gf"/>
@@ -27,7 +28,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Color Makeup" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AFK-ss-CFV">
-                                <rect key="frame" x="50" y="271" width="235" height="39"/>
+                                <rect key="frame" x="71" y="271" width="177" height="39"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="Reader-Bold" family="Reader" pointSize="22"/>
                                 <color key="textColor" red="0.79420336790000001" green="0.037855404969999999" blue="0.089164817049999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -49,19 +50,56 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Complexion" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BQS-qQ-Mlo">
-                                <rect key="frame" x="50" y="19" width="225" height="38"/>
+                                <rect key="frame" x="70" y="19" width="177" height="38"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="Reader-Bold" family="Reader" pointSize="22"/>
                                 <color key="textColor" red="0.79420336790000001" green="0.037855404969999999" blue="0.089164817049999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="v3S-RL-Gck">
+                                <rect key="frame" x="20" y="65" width="984" height="198"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JVJ-ga-hMB">
+                                        <rect key="frame" x="0.0" y="84" width="20" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" backgroundImage="button_left.png"/>
+                                        <connections>
+                                            <action selector="onTapScrollBtn:" destination="TYu-Ly-iev" eventType="touchUpInside" id="yGb-wa-TdA"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D96-U7-3Ax">
+                                        <rect key="frame" x="964" y="84" width="20" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" backgroundImage="button_right.png"/>
+                                        <connections>
+                                            <action selector="onTapScrollBtn:" destination="TYu-Ly-iev" eventType="touchUpInside" id="bZA-Q5-a1v"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ySQ-PW-YFp">
+                                <rect key="frame" x="70" y="318" width="883" height="198"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
+                    <connections>
+                        <outlet property="mColorMakeupView" destination="ySQ-PW-YFp" id="g0w-EU-nCf"/>
+                        <outlet property="mComplexionView" destination="v3S-RL-Gck" id="PUM-Zt-jse"/>
+                        <outlet property="mLeftBtn" destination="JVJ-ga-hMB" id="cca-nb-gwp"/>
+                        <outlet property="mRightBtn" destination="D96-U7-3Ax" id="8ne-8V-bXA"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="9nP-xU-LdY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-5834.765625" y="-6218.75"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="button_left.png" width="35" height="64"/>
+        <image name="button_right.png" width="35" height="64"/>
+    </resources>
 </document>
