[SBASMK-29] アイテム検索画面の修正

--- a/Share Beauty App/Base.lproj/SMBKTopViewController.storyboard
+++ b/Share Beauty App/Base.lproj/SMBKTopViewController.storyboard
@@ -120,7 +120,7 @@ REDEFINED</string>
                                                 <integer key="value" value="1"/>
                                             </userDefinedRuntimeAttribute>
                                             <userDefinedRuntimeAttribute type="color" keyPath="layer.borderUIColor">
-                                                <color key="value" red="1" green="0.010302454954090101" blue="0.10658967261663532" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="value" red="0.78485369682312012" green="0.06217038631439209" blue="0.18147075176239014" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                         <connections>
